[gd_scene load_steps=2 format=3 uid="uid://b60dyhi42p83w"]

[ext_resource type="Script" uid="uid://cxgofld5ldkvv" path="res://scenes/game_over.gd" id="1_xeevv"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_xeevv")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Container/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 128
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Container/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Container/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="Container/CenterContainer/VBoxContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Game Over"

[node name="CenterContainer3" type="CenterContainer" parent="Container/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="Container/CenterContainer/VBoxContainer/VBoxContainer/CenterContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Score: 12345"

[node name="CenterContainer2" type="CenterContainer" parent="Container/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Container/CenterContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="RestartButton" type="Button" parent="Container/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="MenuButton" type="Button" parent="Container/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="Width" type="Control" parent="Container/CenterContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2
